[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
lettre = { version = "0.10", features = ["smtp-transport", "tokio1-native-tls"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.15"
syn = { version = "1.0.109", features = ["derive", "parsing", "full"] }